--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,8 @@ body{
     margin-left: 1em;
     margin-bottom: 1em;
     text-decoration:none;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .rodape__texto{
