--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,8 @@ body{
     font-size: 14px;
     color: var(--cor-secundario);
 }
+
+.lista__link a{
+    text-decoration: none;
+    color: var(--cor-texto);
+}
