--- a/styles.css
+++ b/styles.css
@@ -144,8 +144,7 @@ body{
 
 .lista__link{
     color: var(--cor-texto);
-    margin-left: 1em;
-    margin-bottom: 1em;
+    padding: 2em;
     text-decoration:none;
     font-size: 16px;
     font-weight: 400;
