--- a/styles.css
+++ b/styles.css
@@ -140,11 +140,12 @@ body{
     justify-content: center;
     list-style-type: none;
     color: var(--cor-texto);
+    padding: 2px;
 }
 
 .lista__link{
     color: var(--cor-texto);
-    padding: 2em;
+    margin: 11px;
     text-decoration:none;
     font-size: 16px;
     font-weight: 400;
